# rust-rocket-micro-service

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
IT/: cassandra-setup.cql  create_vehicle.json  launch-it-tests.sh
IT/tests/: 1-get-vehicle.sh  2-get-vehicle-performance.sh  3-create-vehicle.sh  4-create-vehicle-performance.sh
src/: main.rs
src/controller/: catchers.rs  controllers.rs
src/dao/: session_manager.rs
src/domain/: vehicle.rs  vehicle_type.rs
src/dto/: book.rs  vehicle_dto.rs
src/mapper/: vehicle_mapper.rs
src/repository/: vehicle_repository.rs
src/service/: vehicle_service.rs
