[package]
name = "rust-rocket-micro-service"
version = "0.1.0"
authors = ["raultov <angel.raul.tovar.martin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.58"
uuid = "0.8.2"
scylla = { git = "https://github.com/scylladb/scylla-rust-driver", branch = "main"}
scylla-macros = { git = "https://github.com/scylladb/scylla-rust-driver", branch = "main"}
tokio-retry = "0.3"

[dependencies.rocket]
version = "0.5.0-dev"
features = ["json", "uuid"]
