[package]
name = "rust_rocket_micro_service"
version = "0.1.0"
authors = ["raultov <angel.raul.tovar.martin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.58"
scylla = { git = "https://github.com/scylladb/scylla-rust-driver", branch = "main"}
scylla-macros = { git = "https://github.com/scylladb/scylla-rust-driver", branch = "main"}
tokio-retry = "0.3"
cfg-if = "0.1"
async-trait = "0.1.51"
mockall_double = "0.2.0"
mockall = "0.10.2"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.rocket]
version = "0.5.0-dev"
features = ["json", "uuid"]

[dependencies.uuid]
features = ["v1", "v4"]

[dev-dependencies]
tokio-test = "*"
